# RUST_VS_PYTHON

./: .gitignore  benchmark_commands.txt  load_tester.py
A/: Preprocessing_Statistics.xlsx  RS_VS_PY_1.pptx  Searching_Statistics.xlsx
BENCHMARKING/: .gitignore  Becnhmark Summary.xlsx  README.md  bench.py  csv_to_excel.py  csvs_to_excel.py  locust_bench.py  locust_bench_1.py  python_benchmarks.xlsx  run_all_bench.py  rust_benchmarks.xlsx
BENCHMARKING/Misc/: DIAGNOSIS.md  FIXES_SUMMARY.txt
BENCHMARKING/commands/: FLASK_COMMANDS.txt  RUST_COMMANDS.txt
BENCHMARKING/comparison/: comparison.py
BENCHMARKING/python/: 10_200_baseline_create.csv  10_200_baseline_create.csv.resources.csv  10_200_baseline_read.csv  10_200_baseline_read.csv.resources.csv  5_100_baseline_readsingle.csv  5_100_baseline_readsingle.csv.resources.csv  5_100_baseline_update.csv  5_100_baseline_update.csv.resources.csv  (+5 more)
FLASK/: .env  app.py  delete.txt  models.py  read.txt  requirements.txt  utils.py
LEPTOS_RUST/: .gitignore  Cargo.toml  README.md
LEPTOS_RUST/leptos_app/: Cargo.toml
LEPTOS_RUST/leptos_app/src/: lib.rs  main_client.rs
LEPTOS_RUST/server/: Cargo.toml  db.sqlite  output_metrics.csv
LEPTOS_RUST/server/src/: handlers.rs  item.rs  lib.rs  main.rs  metric.rs  utils.rs
Reports/: api_endpints.md  preprocessing_report.md  searching_algorithms_report.md
SEARCHING_PREPROCESSING/: Preprocessing_Statistics.xlsx  Searching_Statistics.xlsx
VMS/rust/vehicle_manager/: Cargo.toml  api-tests.ps1
VMS/rust/vehicle_manager/src/: db.rs  handlers.rs  lib.rs  main.rs  vehicle.rs
(+113 files in other folders)
